fix too big unfinished

--- a/index.css
+++ b/index.css
@@ -82,7 +82,7 @@ h3+ul {
 }
 
 section.meeting-info {
-    font-size: 100px;
+    font-size: 16px;
     color: red;
     background-color: yellow;
 }
